Ajustement du header quand barre de notification active

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nuances-evenements",
+  "name": "chargemap-business",
   "version": "1.0.0",
   "description": "desc",
   "main": "index.js",
